Add existing files

--- a/ncert/9.2.8/main.tex
+++ b/ncert/9.2.8/main.tex
@@ -106,7 +106,7 @@ Definition of derivative,
 \begin{align}
     f^\prime(y) &\approx \lim_{h\to0}\frac{f(y+h)-f(y)}{h} \\
     f(y+h) &\approx f(y)+hf^\prime(y) \\
-    x_{n+1} &\approx x_{n} + h\frac{dx}{dy}\Big|_{x=x_{n}, y=y_{n}}
+    \implies x_{n+1} &\approx x_{n} + h\frac{dx}{dy}\Big|_{x=x_{n}, y=y_{n}}
 \end{align}
 
 Difference equation,
