--- a/ncert/12.9.4.13/main.tex
+++ b/ncert/12.9.4.13/main.tex
@@ -63,6 +63,10 @@ Find a particular solution satisfying the differential equation,
     \cos{\brak{\frac{dy}{dx}}} = a \quad \brak{a\in\mathbb{R}}
 \end{align}
 given condition,
+\begin{align}
+    y\brak{0} = 1
+    \label{eqn:init_cond}
+\end{align}
 
 \solution
 
@@ -70,49 +74,54 @@ given condition,
 
 \textbf{Theoretical Solution:}
 \begin{align}
-    y &= \frac{dy}{dx}\brak{y\sin{y}+\cos{y}+x} \\
-    \frac{dx}{dy} - \frac{x}{y} &= \sin{y} + \frac{\cos{y}}{y}
-\end{align}
-
-Integrating factor,
-\begin{align}
-    \mu(y) &= e^{\int-\frac{1}{y}dy} \\
-    \mu(y) &= \frac{1}{y}
+    \frac{dy}{dx} &= \cos^{-1}a \\
+    dy &= \brak{\cos^{-1}a}dx
 \end{align}
 
 Integration,
 \begin{align}
-    \frac{x}{y} &= \int\mu(y)\brak{\sin{y}+\frac{\cos{y}}{y^2}}dy \\
-    \frac{x}{y} &= \int\frac{\sin{y}}{y}dy+\int\frac{\cos{y}}{y^2}dy \\
-    \frac{x}{y} &= \int\frac{\sin{y}}{y}dy+\cos{y}\int\frac{1}{y^2}dy-\int\frac{\sin{y}}{y}dy \\
-    \frac{x}{y} &= -\frac{\cos{y}}{y}+c \\
-    x &= cy-\cos{y}
+    \int dy &= \int \brak{\cos^{-1}a}dx \\
+    y &= \brak{\cos^{-1}a}x + c
     \label{eqn:gen_soln}
 \end{align}
 
-Thus the equation \eqref{eqn:soln} is a solution to the differential equation \eqref{eqn:ode} when $c = 1$.
+To find $c$ substitute \eqref{eqn:init_cond} in \eqref{eqn:gen_soln},
+\begin{align}
+    1 &= \brak{\cos^{-1}a}\brak{0} + c \\
+    1 &= 0 + c \\
+    c &= 1
+\end{align}
+
+Particular solution,
+\begin{align}
+    y &= \brak{\cos^{-1}a}x + 1
+\end{align}
 
 \medskip
 
-\textbf{Algorithm (Forward Euler Method):}
+\textbf{Simulated Solution:}
 
-Definition of derivative,
+Trapezoidal rule,
 \begin{align}
-    f^\prime(y) &\approx \lim_{h\to0}\frac{f(y+h)-f(y)}{h} \\
-    f(y+h) &\approx f(y)+hf^\prime(y) \\
-    \implies x_{n+1} &\approx x_{n} + h\frac{dx}{dy}\Big|_{x=x_{n}, y=y_{n}}
+    \int\limits_{x_0}^{x_n}f(x)dx &\approx \frac{h}{2} \brak{f(x_{0}) + 2 \sum_{i=1}^{n-1} f(x_{i}) + f(x_{n}) }
+\end{align}
+
+Discretization using trapezoidal rule, integrate $f(x)=cos^{-1}a$ from $x_{n}$ to $x_{n+1}$,
+\begin{align}
+    y_{n+1}-y_{n} &\approx \frac{h}{2}\brak{f\brak{x_{n}}+f\brak{x_{n+1}}} \\
+    y_{n+1} &\approx y_{n} + \frac{h}{2}\brak{\cos^{-1}a + \cos^{-1}a}
 \end{align}
 
 Difference equation,
 \begin{align}
-    x_{n+1} &\approx x_{n} + h\brak{\sin{y_{n} + \frac{\cos{y_{n}} + x_{n}}{y_{n}}}} \\
-    y_{n+1} &= y_{n}+h
+    y_{n+1} &\approx y_{n} + h\cos^{-1}a \\
+    x_{n+1} &= x_n + h
 \end{align}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=\columnwidth]{figs/plot.png}
-    \caption{Plot of the differential equation when $h=0.01$}
+    \caption{Plot of the differential equation when $h=0.01$, $a=0.5$}
     \label{fig:Plot1}
     \end{figure}
 \end{document}}
