Add existing files

--- a/ncert/12.9.4.13/main.tex
+++ b/ncert/12.9.4.13/main.tex
@@ -41,7 +41,7 @@
 \bibliographystyle{IEEEtran}
 \vspace{3cm}
 
-\title{12.9.2.8}
+\title{12.9.4.13}
 \author{EE24BTECH11019 - Dwarak A}
 % \maketitle
 % \newpage
@@ -106,7 +106,7 @@ Trapezoidal rule,
     \int\limits_{x_0}^{x_n}f(x)dx &\approx \frac{h}{2} \brak{f(x_{0}) + 2 \sum_{i=1}^{n-1} f(x_{i}) + f(x_{n}) }
 \end{align}
 
-Discretization using trapezoidal rule, integrate $f(x)=\cos^{-1}a$ from $x_{n}$ to $x_{n+1}$,
+Discretization using trapezoidal rule, integrate $f(x)=cos^{-1}a$ from $x_{n}$ to $x_{n+1}$,
 \begin{align}
     y_{n+1}-y_{n} &\approx \frac{h}{2}\brak{f\brak{x_{n}}+f\brak{x_{n+1}}}
 \end{align}
