--- a/hardware/clock/main.tex
+++ b/hardware/clock/main.tex
@@ -5,8 +5,8 @@
 \usepackage{xcolor}
 \usepackage{tikz}
 \usepackage{caption}
+\usepackage{hyperref}
 \usepackage{tocloft}
-\usepackage{hyperref} % Load hyperref near the end
 
 \title{Arduino-Based Digital Clock with Timer Mode}
 \author{Dwarak A - EE24BTECH11019}
@@ -20,18 +20,12 @@
 This report describes the design and implementation of an Arduino-based digital clock with an integrated timer mode. The system utilizes a 7447 BCD to 7-segment decoder with common anode (active low) 7-segment displays and button-based controls for time adjustments. Timekeeping is managed via a timer interrupt, while the display is driven using multiplexing to handle six digits representing hours, minutes, and seconds.
 \end{abstract}
 
-\newpage
-\tableofcontents
-\newpage
-
 \section{Introduction}
 Digital clocks play a crucial role in embedded systems. This project implements an Arduino-based clock that displays time in hours, minutes, and seconds while providing a countdown timer mode. Key features include the use of a 7447 BCD to 7-segment decoder (designed for common anode displays, meaning the segment outputs are active low), multiplexed display control, and several pushbuttons for user interaction.
 
 \section{Hardware Setup}
 \subsection{Components Required}
-% The table file "tables/table1.tex" should contain your components table.
-\input{tables/table1.tex}
-\newpage
+\input{tables/table1.tex}\newpage
 
 \subsection{Basic Connections}
 
@@ -48,7 +42,7 @@ The pushbuttons, connected using the Arduino's internal pull-up resistors, pull 
 \input{tables/table4.tex}
 
 \section{Arduino to AVR Pin Mapping}
-The following table shows how the Arduino board’s pin labels correspond to the AVR microcontroller’s port names as referenced in AVR GCC. This mapping is essential for low-level programming and direct port manipulation.
+The following table shows how the Arduino board’s pin labels correspond to the AVR microcontroller’s port names as referenced in AVR GCC. This mapping is essental for low-level programming and direct port manipulation.
 \input{tables/table5.tex}
 
 \section{IC and Display Pinouts}
@@ -60,17 +54,11 @@ The following table shows how the Arduino board’s pin labels correspond to the
 \end{center}
 
 \subsection{7447 Decoder Pinout}
-Below is the placeholder for your TikZ picture for the 7447 decoder pinout. Replace the placeholder comment with your TikZ code or use an external PNG image as needed.
+Below is the placeholder for your TikZ picture for the 7447 decoder pinout. Insert your TikZ code here.
+
 \begin{figure}[h]
     \centering
-    % Uncomment one of the following based on your preference:
-    
-    % If you have a TikZ file:
-    %\input{figs/7447.tex}
-    
-    % Or, if you prefer a PNG image:
     \includegraphics[width=0.8\textwidth]{figs/7447_pinout.png}
-    
     \caption{7447 IC Pinout Diagram}
     \label{fig:7447_pinout}
 \end{figure}
@@ -79,12 +67,12 @@ Below is the placeholder for your TikZ picture for the 7447 decoder pinout. Repl
 Multiplexing is employed to drive multiple 7-segment displays using a limited number of Arduino pins. The process is as follows:
 \begin{enumerate}
     \item The Arduino sets the BCD outputs (PD2--PD5) to the binary value corresponding to the digit to be displayed.
-    \item It then activates the corresponding digit enable pin (one of pins 6--11) for a brief period (on the order of $10^{-3}$ seconds).
+    \item It then activates the corresponding digit enable pin (one of pins 6--11) for a brief period (of the order $10^{-3}$ s).
     \item The digit is then deactivated, and the Arduino moves to the next digit.
 \end{enumerate}
-This rapid cycling (typically at least 50 Hz per digit) creates the illusion of all digits being lit simultaneously, due to the persistence of vision.
+This rapid cycling (typically at least 50 Hz per digit) creates the illusion of all digits being lit simultaneously, due to persistence of vision.
 
-\section{Timekeeping withTimer Interrupt}
+\section{Timekeeping with Timer Interrupt}
 The Arduino utilizes Timer0 to generate an interrupt every 1 ms. This interrupt increments a global millisecond counter. When the counter reaches 1000, indicating one second has elapsed, the following steps occur:
 \begin{itemize}
     \item The seconds value is incremented.
@@ -109,8 +97,13 @@ The Arduino utilizes Timer0 to generate an interrupt every 1 ms. This interrupt 
 \subsection{Clock/Timer Mode Toggle (A5)}
 Pressing the mode toggle button switches between clock mode (count-up) and timer mode (count-down) without losing the stored time for either mode.
 
+\section{Source Code}
+For easy access to the complete source code of this project, visit the following repository:
+\begin{center}
+    \url{https://github.com/Dwarak-A/EE1003/blob/main/hardware/clock}
+\end{center}
+
 \section{Conclusion}
 This project demonstrates the implementation of an Arduino-based digital clock featuring a timer mode. By utilizing a 7447 BCD to 7-segment decoder with common anode displays (active low) and employing multiplexing, the design efficiently drives a six-digit display. The use of timer interrupts ensures accurate timekeeping, and the system allows user interaction through multiple pushbuttons.
 
 \end{document}
- 
